server_prod_local.log
file:///home/ubuntu/whatsapp-warming/backend/services/whatsappManager.js:82
                defaultQueryTimeoutMs: 60000,
                                     ^

SyntaxError: Unexpected token ':'
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)

Node.js v18.20.8
